# thyrse

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
chrysalis/: __init__.py  adts.py  combinators.py  declarative_flow.py  func.py  implicit.py  inline_flow.py  lazy.py  lens.py  predicates.py  safe.py
thyrse/: __init__.py  adts.py  combinators.py  declarative_flow.py  func.py  implicit.py  inline_flow.py  lazy.py  lens.py  predicates.py  safe.py
