[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thyrse"
version = "0.1.4"
description = "Fast and elegant functional programming toolkit for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC0-1.0"}
authors = [
  {name = "kagami-meika", email = "meikakagami0512@gmail.com"}
]

[tool.setuptools]
packages = ["thyrse"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
